<resources>
    <string name="app_name">StrengthProgramApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_programs">Programs</string>
    <string name="nav_exercises">Exercises</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_settings">Settings</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Programs</item>
        <item>Exercises</item>
        <item>Calendar</item>
        <item>Statistics</item>
        <item>Settings</item>
    </string-array>

    <!--Toolbar settings option-->
    <string name="action_settings">Settings</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>


